--- a/app/assets/stylesheets/user/registration.css
+++ b/app/assets/stylesheets/user/registration.css
@@ -67,10 +67,6 @@
   margin-top: 3px;
 }
 
-.form-info-header {
-  font-weight: bold;
-}
-
 .form-info-text {
   font-size: 15px;
 }
@@ -94,27 +90,6 @@
   resize: none;
 }
 
-.input-birth-wrap {
-  display: flex;
-  flex-wrap: wrap;
-}
-
-.input-birth-wrap select {
-  width: 75px;
-  margin-top: 5px;
-  height: 45px;
-  padding-left: 10px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  background: #fff;
-  font-size: 12px;
-  cursor: pointer;
-}
-
-.input-birth-wrap p {
-  line-height: 60px;
-  padding: 0 5px;
-}
 
 .field_with_errors {
   display: contents;
@@ -132,14 +107,10 @@
   padding-bottom: 50px;
 }
 
-.form-bottom-text>span {
-  color: #0099e8;
-  cursor: pointer;
-}
-
 .register-btn {
-  width: 50%;
+  width:  40%;
   margin: 0 auto;
+  padding-top: 60px;
 }
 
 .register-red-btn {
@@ -149,12 +120,5 @@
   color: #fff;
   line-height: 48px;
   font-size: 14px;
-  cursor: pointer;
-}
-
-.register-info {
-  margin: 30px 180px 0 0;
-  color: #0099e8;
-  text-align: right;
   cursor: pointer;
 }
