--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -13,10 +13,23 @@
 
   <div class="form-group">
     <div class='form-text-wrap'>
-      <label class="form-text">ニックネーム</label>
+      <label class="form-text">名前(全角)</label>
       <span class="indispensable">必須</span>
     </div>
-    <%= f.text_area :nick_name, class:"input-default", id:"nickname", placeholder:"例) furima太郎", maxlength:"40" %>
+    <div class='input-name-wrap'>
+      <%= f.text_area :last_name_kanji, class:"input-name", id:"last-name", placeholder:"例) 山田" %>
+      <%= f.text_area :first_name_kanji, class:"input-name", id:"first-name", placeholder:"例) 太郎" %>
+    </div>
+  </div>
+  <div class="form-group">
+    <div class='form-text-wrap'>
+      <label class="form-text">名前カナ(全角)</label>
+      <span class="indispensable">必須</span>
+    </div>
+    <div class='input-name-wrap'>
+      <%= f.text_area :last_name_kana, class:"input-name", id:"last-name-kana", placeholder:"例) ヤマダ" %>
+      <%= f.text_area :first_name_kana, class:"input-name", id:"first-name-kana", placeholder:"例) タロウ" %>
+    </div>
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
@@ -25,6 +38,8 @@
     </div>
     <%= f.email_field :email, class:"input-default", id:"email", placeholder:"PC・携帯どちらでも可", autofocus: true %>
   </div>
+<%# ----------------------------------------- %>
+
   <div class="form-group">
     <div class='form-text-wrap'>
       <label class="form-text">パスワード</label>
@@ -40,65 +55,29 @@
     </div>
     <%= f.password_field :password_confirmation, class:"input-default", id:"password-confirmation", placeholder:"同じパスワードを入力して下さい" %>
   </div>
+  
+
+<%# ------------------------------------ %>
+  
   <div class="form-group">
-    <p class='form-info-header'>
-      本人確認
-    </p>
-    <p class='form-info-text'>
-      安心・安全にご利用いただくために、お客さまの本人情報の登録にご協力ください。他のお客さまに公開されることはありません。
-    </p>
+    <div class='form-text-wrap'>
+      <label class="form-text">社員コード</label>
+      <span class="indispensable">必須</span>
+    </div>
+    <%= f.text_field :employee_number, class:"input-default", id:"employee_number", placeholder:"6文字以上の半角数字" %>
+    <p class='info-text'>※数字のみ入力してください</p>
   </div>
   <div class="form-group">
     <div class='form-text-wrap'>
-      <label class="form-text">お名前(全角)</label>
+      <label class="form-text">社員コード(確認)</label>
       <span class="indispensable">必須</span>
     </div>
-    <div class='input-name-wrap'>
-      <%= f.text_area :last_name_kanji, class:"input-name", id:"last-name", placeholder:"例) 山田" %>
-      <%= f.text_area :first_name_kanji, class:"input-name", id:"first-name", placeholder:"例) 陸太郎" %>
-    </div>
+    <%= f.text_field :employee_number, class:"input-default", id:"employee_number", placeholder:"同じ社員コードを入力して下さい" %>
   </div>
-  <div class="form-group">
-    <div class='form-text-wrap'>
-      <label class="form-text">お名前カナ(全角)</label>
-      <span class="indispensable">必須</span>
-    </div>
-    <div class='input-name-wrap'>
-      <%= f.text_area :last_name_kana, class:"input-name", id:"last-name-kana", placeholder:"例) ヤマダ" %>
-      <%= f.text_area :first_name_kana, class:"input-name", id:"first-name-kana", placeholder:"例) リクタロウ" %>
-    </div>
-  </div>
-  <div class="form-group">
-    <div class='form-text-wrap'>
-      <label class="form-text">生年月日</label>
-      <span class="indispensable">必須</span>
-    </div>
-    <div class='input-birth-wrap'>
-      <%= raw sprintf(
-                  f.date_select(
-                    :birthday,
-                    class:'select-birth',
-                    id:"birth-date",
-                    use_month_numbers: true,
-                    prompt:'--',
-                    start_year: 1930,
-                    end_year: (Time.now.year - 5),
-                    date_separator: '%s'),
-                  "<p> 年 </p>", "<p> 月 </p>") + "<p> 日 </p>" %>
-    </div>
-    <p class='info-text'>※ 本人情報は正しく入力してください。会員登録後、修正するにはお時間を頂く場合があります。</p>
-  </div>
-  <div class="form-group">
-    <h2 class='form-bottom-text'>
-      「会員登録」のボタンを押すことにより、
-      <span>利用規約</span>
-      <br>に同意したものとみなします
-    </h2>
-  </div>
+
   <div class='register-btn'>
     <%= f.submit "会員登録" ,class:"register-red-btn" %>
   </div>
-  <p class='register-info'>本人情報の登録について</p>
 </div>
 <% end %>
 
