--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -22,105 +22,38 @@
 
 
   <%# 商品一覧 %>
-  <div class='project-contents'>
-    <h2 class='title'>プロジェクト 一覧</h2>
+  <div class='project-titles'>
+      <h2 class='title'>プロジェクト 一覧</h2>
     <div class="subtitle" >
       新規投稿商品
     </div>
-    <ul class='item-lists'>
-    <%# @projects.each do |project| %>
-      <li class='list'>
-
-      <%= link_to item_path(project.id) do %> 　<%# ⬅︎投稿した画像の反映する場所。投稿したタスクを反映させる %>　
-        <div class='project-info'>
-          <h3 class='project-name'>
-            <%= project.title %>
-          </h3>
-        </div>
-      <% end %>
-
-      </li>
-
-      <li class='list'>
-      w
-      </li>
-      <li class='list'>
-      f
-      </li>
-
-    <%# end %>
-
-
-    
   </div>
-  <%# /商品一覧 %>
-
-
-  <%# 完了項目　%>
-  <div class='complete-contents'>
-    <div class=''>
-    </div>
-
-    <%# if @completes.empty? %>
-    <%# end %>
-
-  </div>
-  <%# /完了項目　%>
-
-</div>
-<%= link_to new_project_path, class: 'purchase-btn' do %>
-  <span class='purchase-btn-text'>出品する</span>
-  <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
-<% end %>
-
-<%= render "shared/footer" %>
-
-
-
-
-<%= render "shared/header" %>
-<div class='main'>
-
-  <%# 画面上部の「人生を変えるフリマアプリ」帯部分 %>
-  <div class='title-contents'>
-    <h2 class='service-title'>
-      人生を変えるフリマアプリ
-    </h2>
-    <p class='service-explain'>
-      FURIMAはだれでもかんたんに出品・購入できる
-    </p>
-    <p class='service-explain'>
-      フリマアプリです
-    </p>
-    <div class='store-btn'>
-      <%= link_to image_tag("app-store.svg", class:"apple-btn"), "#" %>
-      <%= link_to image_tag("google-play.png", class:"google-btn"), "#" %>
-    </div>
-  </div>
-  <%# /画面上部の「人生を変えるフリマアプリ」帯部分  %>
-
-
-
-  <%# 商品一覧 %>
   <div class='project-contents'>
-    <h2 class='title'>プロジェクト 一覧</h2>
-    <div class="subtitle" >
-      新規投稿商品
-    </div>
-    <ul class='project-lists'>
 
+    <ul class='project-groups'>
+      <li class='title'>
+        集配営業部
+      </li>
+      
+        <li class='list'>
+        t
+        </li>
+  
+    </ul>
+
+    <ul class='project-groups'>
+      <li class='title'>
+        ゆうパック
+      </li>
       <li class='list'>
-      t
+      
       </li>
     </ul>
 
-    <ul class='project-lists'>
-      <li class='list'>
-      w
+    <ul class='project-groups'>
+      <li class='title'>
+        総務部
       </li>
-    </ul>
-
-    <ul class='project-lists'>
       <li class='list'>
       f
       </li>
