--- a/app/views/projects/index.html.erb
+++ b/app/views/projects/index.html.erb
@@ -76,7 +76,7 @@
 
 </div>
 <%= link_to new_project_path, class: 'purchase-btn' do %>
-  <span class='purchase-btn-text'>出品する</span>
+  <span class='purchase-btn-text'>タスク新規作成</span>
   <%= image_tag 'icon_camera.png' , size: '185x50' ,class: "purchase-btn-icon" %>
 <% end %>
 
