--- a/app/assets/stylesheets/projects/new.css
+++ b/app/assets/stylesheets/projects/new.css
@@ -16,14 +16,14 @@
   text-align: center;
 }
 
-.items-sell-main {
+.projects-main {
   background-color: #FFF;
   width: 70vw;
   min-width: 450px;
   padding: 10vh 15vw;
 }
 
-.items-sell-title {
+.projects-title {
   font-size: 22px;
   font-weight: bold;
   text-align: center;
@@ -72,31 +72,13 @@
 
 /* /共通 */
 
-/* 商品画像 */
-.img-upload {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-  padding: 2vh 0;
-}
-
-.click-upload {
-  margin: 15px 0;
-  min-width: 250px;
-}
-
-.click-upload>p {
-  margin-bottom: 15px;
-}
-
-/* /商品画像 */
 
 /* 商品名と商品説明 */
-.new-items {
+.new-projects {
   padding: 2vh 0;
 }
 
-.items-text {
+.projects-text {
   width: 100%;
   padding: 16px 16px 8px;
   border-radius: 4px;
@@ -105,7 +87,7 @@
   resize: none;
 }
 
-.items-explain {
+.projects-explain {
   margin-top: 2vh;
 }
 
@@ -129,51 +111,6 @@
 
 /* /商品の詳細など */
 
-/* 販売価格 */
-.sell-price {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-
-.price-content {
-  width: 300px;
-  border-bottom: 1px solid #ccc;
-  padding: 10px;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.price-text {
-  /* min-width: 170px; */
-  display: flex;
-  align-items: center;
-}
-
-.sell-yen {
-  font-size: 18px;
-}
-
-.price-input {
-  height: 30px;
-  text-align: right;
-  padding-right: 10px;
-}
-
-/* /販売価格 */
-
-/* 注意書き */
-.caution {
-  padding: 5vh 0;
-}
-
-.sentence>a {
-  color: #0099e8;
-  text-decoration: none;
-}
-
-/* /注意書き */
 
 /* 下部ボタン */
 .sell-btn-contents {
