--- a/app/assets/stylesheets/projects/index.scss
+++ b/app/assets/stylesheets/projects/index.scss
@@ -51,6 +51,14 @@ a {
 
 
 /* 商品一覧 */
+.project-contents {
+  font-size: 5vh;
+  text-decoration: none;
+  align-items: center;
+  padding: 5vh 5vw;
+  background-color: aquamarine;
+}
+
 .project-titles {
   background-color: #FFF;
   display: flex;
@@ -73,39 +81,36 @@ a {
   font-weight: bold;
 }
 
-.project-contents {
-  font-size: 5vh;
-  text-decoration: none;
-  display: flex;
-  align-items: center;
-  padding: 5vh 0;
-  background-color: burlywood;
-}
 
 .project-groups {
-  width: 100vw;
-  display: flex;
   flex-wrap: wrap;
   justify-content: center;
-  padding: 0 5vw;
+  padding: 8px 5vw;
+  margin: 3vh 0;
+  border: solid 3px #36c83d;
   background-color: #f8f8f8;
 }
 
-.project-groups>.title {
+.groups-title {
   margin: 3vh;
   font-weight: bold;
   text-decoration: none;
   font-size: 5vh;
+  border: solid 3px #36c83d;
+  border-radius: 10px;
+  display:inline-block;
   background-color: navajowhite;
 }
 
 
-.project-groups>.list {
-  height: 1000px;
+.groups-detail {
+  height: 100px;
   font-size: 3vh;
-  width: 37vh;
   padding: 1vw;
-  background-color: mediumslateblue;
+  border: solid 3px #36c83d;
+  border-radius: 10px;
+  overflow-y: scroll;
+  background-color: rgb(186, 178, 228);
 }
 
 
