--- a/app/assets/stylesheets/projects/new.css
+++ b/app/assets/stylesheets/projects/new.css
@@ -1,7 +1,7 @@
 /* border-bottom: 1px solid #eee; */
 
 
-.items-sell-contents {
+.project-new-contents {
   background-color: #f5f5f5;
   font-family: "Source Sans Pro", Helvetica, Arial, "æ¸¸ã‚´ã‚·ãƒƒã‚¯ä½“", "YuGothic", "ãƒ¡ã‚¤ãƒªã‚ª", "Meiryo", sans-serif;
   font-size: 14px;
@@ -11,16 +11,12 @@
   min-width: 500px;
 }
 
-.items-sell-header {
-  padding: 5vh 0;
-  text-align: center;
-}
-
 .projects-main {
   background-color: #FFF;
   width: 70vw;
   min-width: 450px;
   padding: 10vh 15vw;
+  margin: 60px;
 }
 
 .projects-title {
@@ -44,30 +40,6 @@
   font-weight: bold;
   min-width: 170px;
   margin-bottom: 10px;
-}
-
-.select-box {
-  height: 30px;
-  width: 100%;
-  background-color: #f5f5f5;
-  padding-left: 20px;
-}
-
-.question {
-  width: 20px;
-  height: 20px;
-  border-radius: 10px;
-  background: #0099e8;
-  color: #FFF;
-  font-size: 13px;
-  text-align: center;
-  line-height: 20px;
-  text-decoration: none;
-  margin-left: 5px;
-}
-
-.question-text {
-  display: flex;
 }
 
 /* /共通 */
@@ -113,12 +85,12 @@
 
 
 /* 下部ボタン */
-.sell-btn-contents {
+.project-btn-contents {
   width: 100%;
   text-align: center;
 }
 
-.sell-btn {
+.project-btn {
   background: #ea352d;
   border: 1px solid #ea352d;
   color: #fff;
@@ -126,6 +98,7 @@
   height: 50px;
   font-size: 14px;
   margin-bottom: 4vh;
+  cursor:pointer;
 }
 
 .back-btn {
