作成機能のトップページへの反映２（振分）

--- a/app/assets/stylesheets/projects/new.css
+++ b/app/assets/stylesheets/projects/new.css
@@ -50,6 +50,10 @@
   padding: 2vh 0;
 }
 
+.new-projects-time{
+  margin-bottom:  9px;
+}
+
 .projects-text {
   width: 100%;
   padding: 16px 16px 8px;
