--- a/app/assets/stylesheets/projects/index.scss
+++ b/app/assets/stylesheets/projects/index.scss
@@ -56,7 +56,7 @@ a {
   text-decoration: none;
   align-items: center;
   padding: 5vh 5vw;
-  background-color: aquamarine;
+  background-color: rgb(134, 146, 144);
 }
 
 .project-titles {
@@ -99,21 +99,27 @@ a {
   border: solid 3px #36c83d;
   border-radius: 10px;
   display:inline-block;
-  background-color: navajowhite;
+  background-color: rgb(193, 255, 148);
 }
 
 
 .groups-detail {
-  height: 100px;
+  height: 210px;
   font-size: 3vh;
   padding: 1vw;
-  border: solid 3px #36c83d;
+  border: solid 4px #36c83d;
   border-radius: 10px;
   overflow-y: scroll;
   background-color: rgb(186, 178, 228);
 }
 
-
+.detail-area {
+  border: 2px solid rgb(75, 71, 71); /* 境界線を作成 */
+  border-radius: 10px;
+  padding: 10px; /* 行と境界線の間の余白を設定 */
+  margin-bottom: 10px; /* 行と行の間の余白を設定 */
+  background-color: rgb(252, 251, 255);
+}
 
 .project-info {
   background-color: #FFF;
