--- a/app/views/projects/new.html.erb
+++ b/app/views/projects/new.html.erb
@@ -8,26 +8,25 @@
 
     <%# 商品名と商品説明 %>
     <div class="new-projects">
+      <%= f.collection_select(:section_id, Section.all, :id, :name, {}, {class:"select-box", id:"project-section"}) %>
       <div>
-        <div class=>
+        <div class='new-projects-time'>
         開始日時　:　
         <%= f.date_select :start_date, class:"projects-text", use_month_numbers: true, prompt:'--',start_year: 1930,end_year: (Time.now.year - 5) %>
         </div>
       </div>
       <div>
-        <div class=>
+        <div class='new-projects-time'>
         終了日時　:　
         <%= f.date_select :end_date, class:"projects-text",  use_month_numbers: true, prompt:'--',start_year: 1930,end_year: (Time.now.year - 5) %>
         </div>
       </div>
 
-<%= f.collection_select(:section_id, Section.all, :id, :name, {}, {class:"select-box", id:"project-section"}) %>
-
       <div class="weight-bold-text">
-        プロジェクト名
+        班・部署・管轄名
         <span class="indispensable">必須</span>
       </div>
-      <%= f.text_area :project_title, class:"projects-text", id:"item-name", placeholder:"プロジェクト名（必須 40文字まで)", maxlength:"40" %>
+      <%= f.text_area :project_title, class:"projects-text", id:"item-name", placeholder:"班・部署・管轄名（必須 40文字まで)", maxlength:"40" %>
       <div class="projects-explain">
         <div class="weight-bold-text">
           プロジェクトの説明
