--- a/app/views/projects/show.html.erb
+++ b/app/views/projects/show.html.erb
@@ -1,61 +1,1 @@
-<%= render "shared/header" %>
-<div class="project-new-contents">
-  <div class="projects-main">
-    <h2 class="projects-title">プロジェクトの情報を入力</h2>
-    <%= form_with model: @project, local: true do |f| %>
-
-    <%= render 'shared/error_messages', model: f.object %>
-
-    <%# 商品名と商品説明 %>
-    <div class="new-projects">
-      <%= f.collection_select(:section_id, Section.all, :id, :name, {}, {class:"select-box", id:"project-section"}) %>
-      <div>
-        <div class='new-projects-time'>
-        開始日時　:　
-        <%= f.date_select :start_date, class:"projects-text", use_month_numbers: true, prompt:'--',start_year: 1930,end_year: (Time.now.year - 5) %>
-        </div>
-      </div>
-      <div>
-        <div class='new-projects-time'>
-        終了日時　:　
-        <%= f.date_select :end_date, class:"projects-text",  use_month_numbers: true, prompt:'--',start_year: 1930,end_year: (Time.now.year - 5) %>
-        </div>
-      </div>
-
-      <div class="weight-bold-text">
-        班・部署・管轄名
-        <span class="indispensable">必須</span>
-      </div>
-      <%= f.text_area :project_title, class:"projects-text", id:"item-name", placeholder:"班・部署・管轄名（必須 40文字まで)", maxlength:"40" %>
-      <div class="projects-explain">
-        <div class="weight-bold-text">
-          プロジェクトの説明
-          <span class="indispensable">必須</span>
-        </div>
-        <%= f.text_area :project_detail, class:"projects-text", id:"item-info", placeholder:"プロジェクトの説明（必須 1,000文字まで）" ,rows:"7" ,maxlength:"1000" %>
-      </div>
-    </div>
-    <%# /商品名と商品説明 %>
-
-
-    <%# 下部ボタン %>
-    <div class="project-btn-contents">
-      <%= f.submit "プロジェクトの作成" , class:"project-btn" %>
-      <%=link_to 'もどる', root_path, class:"back-btn" %>
-    </div>
-    <%# /下部ボタン %>
-  </div>
-  <% end %>
-
-  <footer class="items-sell-footer">
-    <ul class="menu">
-      <li><a href="#">プライバシーポリシー</a></li>
-      <li><a href="#">フリマ利用規約</a></li>
-      <li><a href="#">特定商取引に関する表記</a></li>
-    </ul>
-    <%= link_to image_tag('furima-logo-color.png' , size: '185x50'), "/" %>
-    <p class="inc">
-      ©︎Furima,Inc.
-    </p>
-  </footer>
-</div>
+詳細画面（　タスク画面へ移りたいので、この詳細画面は作成しないかも　）
