--- a/app/assets/stylesheets/projects/show.css
+++ b/app/assets/stylesheets/projects/show.css
@@ -1,207 +1,113 @@
 /* 商品の概要 */
 
-.item-show {
-  background-color: #f8f8f8;
-  width: 100vw;
+.project-contents {
+  font-size: 5vh;
+  text-decoration: none;
+  align-items: center;
+  padding: 5vh 5vw;
+  background-color: rgb(134, 146, 144);
+}
+
+.project-titles {
+  background-color: rgb(134, 146, 144);
   display: flex;
   flex-direction: column;
   align-items: center;
   padding: 5vh 0;
 }
 
-.item-box {
-  background-color: #FFF;
-  width: 70vw;
-  min-width: 1200px;
-  padding: 10vh 15vw;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+.project-titles>.title {
+  font-size: 5vh;
+  line-height: 1.4;
+  font-weight: bold;
+  border-radius: 10px;
+  border: solid 5px #a417a0;
+  background-color: #a1e7e3;
 }
 
-.item-box>.name {
+.project-titles>.subtitle {
+  width: 140px;
+  background-color: #a1e7e3;
   text-align: center;
-  font-weight: bold;
-  font-size: 25px;
-}
-
-.item-box-img {
-  height: 50vh;
-  width: 60vw;
-  min-height: 500px;
-  background-color: rgb(205, 202, 202);
-  object-fit: contain;
-}
-
-.item-price-box {
-  margin: 25px 0px;
-  display: flex;
-  align-items: center;
-  flex-direction: column;
-}
-
-.item-price-box>.item-price {
-  font-size: 4vh;
-  font-weight: bold;
-}
-
-.item-price-box>.item-postage {
-  font-size: 16px;
-}
-
-
-.item-red-btn {
-  text-align: center;
-  background-color: #ea352d;
-  font-size: 24px;
-  font-weight: bold;
-  color: #FFF;
-  margin: 20px 0px;
-  padding: 2vh 10vw;
-}
-
-.or-text {
+  /* position: fixed;　⬅︎スクロールと同時に移動する記述 */
+  margin-top: 30px;
   font-size: 20px;
-}
-
-.item-destroy {
-  background-color: lightgray;
-  text-align: center;
-  font-size: 24px;
-  color: black;
-  margin: 20px 0px;
-  padding: 2vh 10vw;
-}
-
-.item-explain-box {
-  font-size: 18px;
-  margin: 40px 0px;
-  overflow-wrap: anywhere;
-}
-
-.detail-table {
-  margin-bottom: 30px;
-  width: 100%;
-}
-
-.detail-item {
-  width: 20%;
-  background-color: #eee;
-  border: 1px solid #dedede;
-  font-size: 14px;
-  text-align: center;
-}
-
-.detail-value {
-  width: 80%;
-  padding: 20px;
-  border: 1px solid #dedede;
-  font-size: 14px;
-}
-
-.option {
-  display: flex;
-  justify-content: space-between;
-  position: relative;
-}
-
-.favorite-btn {
-  border-radius: 40px;
-  width: 15vw;
-  min-width: 200px;
-  color: rgb(249, 75, 0);
-  border: 2px solid #ffb340;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  margin-right: 20px;
-}
-
-.favorite-star-icon {
-  margin-right: 5px;
-}
-
-.report-btn {
-  border-radius: 40px;
-  width: 15vw;
-  min-width: 200px;
-
-  padding: 1vh 0;
-  color: black;
-  border: 2px solid #2d2d2d;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.report-flag-icon {
-  margin-right: 5px;
-}
-
-
-/* /商品の概要 */
-
-.comment-box {
-  width: 40vw;
-  background-color: #fff;
-  margin: 5vh 0;
-  text-align: center;
-}
-
-.comment-text {
-  width: 100%;
-  height: 100px;
-  padding: 10px;
-  border: solid 2px #dedede;
-  resize: none;
-}
-
-.comment-warn {
-  padding: 10px;
-  font-size: 14px;
-  margin: 10px 0px;
-  text-align: left;
-}
-
-.comment-btn {
-  line-height: 48px;
-  background-color: #3CCACE;
-  border: 1px solid #3CCACE;
-  color: #fff;
-  width: 50%;
-  min-width: 150px;
-  font-size: 18px;
-  border-radius: 100px;
-  margin-bottom: 2vh;
-}
-
-.comment-flag {
-  display: flex;
-  justify-content: center;
-}
-
-.comment-flag-icon {
-  margin: 10px 5px 0 0;
-}
-
-.links {
-  display: flex;
-  justify-content: space-between;
-  width: 50vw;
-
-}
-
-.change-item-btn {
-  font-size: 30px;
-  text-decoration: none;
-  color: #3CCACE;
-}
-
-.another-item {
-  display: block;
-  margin: 30px 0px 8px;
-  color: #3CCACE;
-  text-decoration: none;
   font-weight: bold;
-  font-size: 23px;
+  border-radius: 10px;
+  border: solid 5px #ff1e1e;
+}
+
+.link{
+  display: block;
+}
+.project-groups {
+  height: 100vh;
+  flex-wrap: wrap;
+  padding: 8px 5vw;
+  margin: 3vh 0;
+  border: solid 3px #36c83d;
+  background-color: #f8f8f8;
+}
+
+.groups-title {
+  margin: 3vh;
+  font-weight: bold;
+  text-decoration: none;
+  font-size: 5vh;
+  border: solid 3px #36c83d;
+  border-radius: 10px;
+  display:inline-block;
+  background-color: rgb(193, 255, 148);
+}
+
+.groups-detail {
+  height: 80vh;
+  font-size: 3vh;
+  padding: 1vw;
+  border: solid 4px #36c83d;
+  border-radius: 10px;
+  overflow-y: scroll;
+  background-color: rgb(186, 178, 228);
+}
+
+.detail-area {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  border: 2px solid rgb(75, 71, 71); /* 境界線を作成 */
+  border-radius: 10px;
+  padding: 10px; /* 行と境界線の間の余白を設定 */
+  margin-bottom: 10px; /* 行と行の間の余白を設定 */
+  background-color: rgb(252, 251, 255);
+}
+
+.btn-primary-custom,
+.btn-delete-custom {
+  display: inline-block;
+  padding: .375rem .75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  text-align: center;
+  white-space: nowrap;
+  vertical-align: middle;
+  cursor: pointer;
+  border: 1px solid transparent;
+  border-radius: .25rem;
+  color: #fff;
+  background-color: #007bff;
+  border-color: #007bff;
+}
+
+.btn-delete-custom {
+  background-color: #dc3545;
+  border-color: #dc3545;
+}
+
+.btn-primary-custom:hover,
+.btn-delete-custom:hover {
+  color: #fff;
+  text-decoration: none;
+  background-color: #0069d9;
+  border-color: #0062cc;
 }
